# apertium-mrj-mhr

./: Makefile.am  README  apertium-mrj-mhr.mrj-mhr.dix  apertium-mrj-mhr.mrj-mhr.t1x  configure.ac  gt2apertium.cg3r  modes.xml
test/: tests.json
texts/: vixen.mrj.txt
